# mccc

./: .clang-format  .clang-tidy  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CPPLINT.cfg  README.md  README_zh.md  competitive_bench  competitive_bench_dbg
.github/: markdown-link-check-config.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  docs.yml
docs/: api_reference.md  benchmark.md  benchmark_log.txt  ci_cd_setup.md  competitive_analysis.md  design.md  methodology.md  optimization.md
examples/: CMakeLists.txt  bench_qpcpp.cpp  benchmark.cpp  competitive_benchmark.cpp  example_types.hpp  hsm_demo.cpp  priority_demo.cpp  simple_demo.cpp
extras/: bench_utils.hpp  buffer_pool.hpp  data_token.cpp  data_token.hpp  log_macro.hpp  state_machine.hpp
include/mccc/: component.hpp  mccc.hpp  message_bus.hpp  protocol.hpp  static_component.hpp
tests/: CMakeLists.txt  test_backpressure.cpp  test_copy_move.cpp  test_edge_cases.cpp  test_fixed_containers.cpp  test_fixed_function.cpp  test_multithread.cpp  test_priority.cpp  test_ring_buffer.cpp  test_stability.cpp  test_static_component.cpp  test_subscribe.cpp  test_visitor_dispatch.cpp
